[package]
name = "pbbot-rq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ricq = "0.1"
futures = "0.3"
async-trait = "0.1"
bytes = "1.1.0"
tokio-tungstenite = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.13"
lazy_static = "1"

prost = "0.9"
prost-types = "0.9"
thiserror = "1"
tracing = "0.1"
axum = { version = "0.4" }
cached = "0.30"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
dashmap = "5.2"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"

[build-dependencies]
#lust-build = { version = "*", registry = "crates-byted" }
prost-build = { version = "0.9.0" }

[profile.release]
opt-level = 'z'
debug = false
lto = true
incremental = false
codegen-units = 1
strip = true
#panic = 'abort'